--- a/about/index.html
+++ b/about/index.html
@@ -175,6 +175,13 @@ git pull
 </section>
         
           <aside id="sidebar">
+<br>
+ <p>index:false</p>
+ <p>archive:false</p>
+ <p>tag:false</p>
+ <p>category:false</p>
+ <p>is_home:false</p>
+   
   
      <!-- Table of Contents -->
 
