--- a/about/index.html
+++ b/about/index.html
@@ -176,6 +176,8 @@ git pull
         
           <aside id="sidebar">
 <br>
+ <p>page.path:page/index.html</p>
+ <p> url:http://cafe.giscafer.com/page/index.html</p>
  <p>index:false</p>
  <p>archive:false</p>
  <p>tag:false</p>
