--- a/about/index.html
+++ b/about/index.html
@@ -176,6 +176,7 @@ git pull
         
           <aside id="sidebar">
 <br>
+ <p>page.title:Page</p>
  <p>page.path:page/index.html</p>
  <p> url:http://cafe.giscafer.com/page/index.html</p>
  <p>index:false</p>
