--- a/about/index.html
+++ b/about/index.html
@@ -177,6 +177,7 @@ git pull
           <aside id="sidebar">
 <br>
  <p>page.title:Page</p>
+ <p>path :page/index.html</p>
  <p>page.path:page/index.html</p>
  <p> url:http://cafe.giscafer.com/page/index.html</p>
  <p>index:false</p>
