--- a/about/index.html
+++ b/about/index.html
@@ -176,6 +176,7 @@ git pull
         
           <aside id="sidebar">
 <br>
+ <p>post.path:page/index.html</p>
  <p>page.title:Page</p>
  <p>path :page/index.html</p>
  <p>page.path:page/index.html</p>
@@ -185,6 +186,8 @@ git pull
  <p>tag:false</p>
  <p>category:false</p>
  <p>is_home:false</p>
+ <p>page.content:&lt;p&gt;This is a page test.&lt;/p&gt;
+</p>
    
   
      <!-- Table of Contents -->
