--- a/about/index.html
+++ b/about/index.html
@@ -191,10 +191,7 @@ git pull
 
   
      <p>hexo-theme-cafe</p>
-        <p>page.title:hexo-theme-cafe</p>
-        <p>path :about/index.html</p>
-        <p>page.path:about/index.html</p>
-        <p> url:http://cafe.giscafer.com/about/index.html</p>
+        <p>post.path:about/index.html</p>
         <p>index:false</p>
         <p>archive:false</p>
         <p>tag:false</p>
