添加返回顶部按钮

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 </article>
 
 
+
   
     <article id="post-duoshuo-test" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-meta">
@@ -167,6 +168,7 @@
   </div>
   
 </article>
+
 
 
   
@@ -239,6 +241,7 @@
 </article>
 
 
+
   
     <article id="post-videos" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-meta">
@@ -288,6 +291,7 @@
 </article>
 
 
+
   
     <article id="post-categories" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-meta">
@@ -332,6 +336,7 @@
   </div>
   
 </article>
+
 
 
   
@@ -380,6 +385,7 @@
   </div>
   
 </article>
+
 
 
   
@@ -475,6 +481,7 @@
 </article>
 
 
+
   
     <article id="post-images" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-meta">
@@ -525,6 +532,7 @@
 </article>
 
 
+
   
     <article id="post-hello-world" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-meta">
@@ -569,6 +577,7 @@
   </div>
   
 </article>
+
 
 
   
@@ -632,6 +641,7 @@
   </div>
   
 </article>
+
 
 
   
@@ -767,7 +777,7 @@
 
 
 <script src="/js/script.js"></script>
-
+<script src="/js/elevator.js"></script>
   </div>
 </body>
 </html>
