--- a/about/index.html
+++ b/about/index.html
@@ -177,6 +177,21 @@ git pull
 	<!-- 多说评论框 end -->
 </div>
 
+
+
+      <img class="back-to-top-btn" src="/images/fly-to-top.png">Back to Top</img>
+
+<script>
+// Elevator script included on the page, already.
+
+window.onload = function() {
+  var elevator = new Elevator({
+    selector:'.back-to-top-btn',
+    element: document.querySelector('.back-to-top-btn'),
+    duration: 1000 // milliseconds
+  });
+}
+</script>
 </section>
            
     <aside id="sidebar">
@@ -254,7 +269,7 @@ git pull
 
 
 <script src="/js/script.js"></script>
-
+<script src="/js/elevator.js"></script>
   </div>
 </body>
 </html>
